--- a/src/pages/trade/trade-page.css
+++ b/src/pages/trade/trade-page.css
@@ -1,3 +1,9 @@
+sff-trade-page,
+sff-trade,
+sff-offers {
+  display: block;
+}
+
 .cnt-traders {
   display: flex;
   flex-wrap: wrap;
@@ -9,20 +15,48 @@
   max-width: 52rem;
 }
 
+.fin-preview {
+  display: block;
+  margin-right: 2.2rem;
+}
+
+.fin-preview__status {
+  background-color: var(--dk-primary-color, var(--lt-primary-color));
+  height: 2px;
+  margin: 4px 0;
+}
+
+.fin-bad {
+  background-color: var(--dk-error-color, var(--lt-error-color));
+}
+
+.fin-good {
+  background-color: var(--dk-positive-color, var(--lt-positive-color));
+}
+
 .fin-infos {
   display: flex;
   gap: 4px;
-  margin-bottom: 3px;
-  padding-right: 2.5rem;
+  margin-bottom: 4px;
 }
 
+.fin-info {
+  flex-grow: 1;
+  padding: 1rem 0.1rem;
+}
+
+.fin-move,
 .fin-info {
   background-color: var(--dk-bg-color-700, var(--lt-bg-color-100));
   border: 1px solid var(--dk-bg-color-500, var(--lt-bg-color-300));
   box-shadow: 0px 1px 3px 0px hsla(0deg, 0%, 7%, 0.18);
-  flex-grow: 1;
-  padding: 1rem 0.1rem;
   text-align: center;
+}
+
+.fin-move {
+  font-weight: bold;
+  margin: 4px 0;
+  padding: 2px 0;
 }
 
 .fin-info > :nth-child(2) {
@@ -71,7 +105,7 @@
   display: flex;
   flex-shrink: 0;
   justify-content: center;
-  width: 2.5rem;
+  width: 2.2rem;
 }
 
 .cnt-checkbox--on {
@@ -92,6 +126,7 @@
 
 input[type="checkbox"] {
   transform: scale(1.25);
+  margin: 0;
 }
 
 .plr-skills {
