--- a/src/pages/tables/league-fixtures.css
+++ b/src/pages/tables/league-fixtures.css
@@ -11,17 +11,16 @@
 .rounds {
   display: grid;
   grid-auto-rows: max-content;
-  grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(16rem, 1fr));
   height: 35rem;
-  gap: 1rem;
+  gap: 2px;
   overflow: auto;
   position: relative;
 }
 
 .round {
-  border: 3px solid var(--dk-bg-color-700);
+  border: 1px solid var(--dk-bg-color-600);
   box-shadow: 0px 2px 4px 0px hsla(0deg, 0%, 10%, 0.25);
-  border-radius: 8px;
   overflow: hidden;
 }
 
