--- a/src/pages/common/game-header.css
+++ b/src/pages/common/game-header.css
@@ -1,7 +1,8 @@
 :host {
   align-items: center;
-  background-color: var(--dk-bg-color, var(--lt-bg-color));
-  border-bottom: 1px solid var(--dk-bg-color-700, var(--lt-bg-color-100));
+  background-color: var(--dk-bg-color-700, var(--lt-bg-color));
+  border-bottom: 1px solid var(--dk-bg-color-500, var(--lt-bg-color-100));
+  box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.75);
   display: flex;
   justify-content: space-between;
   white-space: nowrap;
