--- a/src/pages/common/menu-bar.css
+++ b/src/pages/common/menu-bar.css
@@ -3,11 +3,12 @@
 
 :host {
   align-items: center;
-  background: var(--dk-bg-color);
-  border-bottom: 1px solid var(--dk-bg-color-700, var(--lt-bg-color-100));
+  background-color: var(--dk-bg-color-750, var(--lt-bg-color-100));
+  border-bottom: 1px solid var(--dk-bg-color-500, var(--lt-bg-color-100));
+  box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.5);
   display: flex;
   gap: 0.5rem;
-  padding: 3px 0.25rem;
+  padding: 3px 8px;
   position: sticky;
   top: var(--header-height);
   z-index: 1;
