--- a/src/pages/players/players-page.css
+++ b/src/pages/players/players-page.css
@@ -31,6 +31,10 @@ tr:nth-of-type(odd) > td {
   background-color: var(--dk-bg-color-700, var(--lt-dg-color-100));
 }
 
+tr:hover > td {
+  background-color: var(--dk-bg-color-600, var(--lt-dg-color-100));
+}
+
 sff-go > a {
   color: var(--dk-on-bg-color, var(--lt-on-bg-color));
 }
