add some style around for the game pages

--- a/src/pages/common/game-page.css
+++ b/src/pages/common/game-page.css
@@ -9,7 +9,9 @@
 }
 
 ::slotted([slot="in-main"]) {
-  padding: 0.4rem;
+  margin: 2rem auto;
+  max-width: 97rem;
+  padding: 0 2%;
 }
 
 /* ----------------- temporary stuff ---------------------- */
