--- a/src/pages/finances/re-sign.css
+++ b/src/pages/finances/re-sign.css
@@ -1,4 +1,5 @@
-@import url("../util/button.css");
+@import "../util/button.css";
+@import "../util/common.css";
 
 :host {
   display: block;
@@ -8,8 +9,7 @@
 
 table {
   border-collapse: collapse;
-  max-width: 55rem;
-  min-width: 30rem;
+  min-width: 34rem;
   table-layout: fixed;
   text-align: center;
   width: 100%;
@@ -38,32 +38,43 @@ th {
   white-space: nowrap;
 }
 
-th:nth-of-type(1) {
-  width: 22%;
-}
-
+th:nth-of-type(11),
 th:last-child {
   width: 10%;
 }
 
 th.small-col {
-  width: 5.8%;
+  width: 3.5rem;
 }
 
-@media screen and (max-width: 34rem) {
-  th:nth-of-type(1) {
-    width: 16.5%;
+@media screen and (max-width: 64rem) {
+  th:last-child {
+    width: 4rem;
+  }
+
+  th:nth-of-type(11) {
+    width: 5rem;
+  }
+
+  th.small-col {
+    width: 6%;
+  }
+
+  .small-col {
+    font-size: 0.9rem;
   }
 }
 
-.small-col {
-  font-size: 0.9rem;
+@media screen and (max-width: 45rem) {
+  th.small-col {
+    width: 5.4%;
+  }
 }
 
 th:nth-of-type(1),
 td:nth-of-type(1) {
   font-style: italic;
-  padding-left: 0.5rem;
+  padding-left: 1%;
   text-align: left;
 }
 
@@ -72,8 +83,8 @@ td:nth-of-type(1) {
 }
 
 .sign-btn {
-  padding: 2px 0.4rem;
-  margin: 2px 0;
+  margin: 3px 0;
+  width: clamp(3.5rem, 90%, 6rem);
 }
 
 .skill-score {
@@ -82,8 +93,4 @@ td:nth-of-type(1) {
   border-bottom-width: 1px;
   display: inline-block;
   width: 1.3rem;
-}
-
-a {
-  color: var(--dk-on-bg-color, var(--lt-on-bg-color));
 }
