--- a/src/index.css
+++ b/src/index.css
@@ -34,6 +34,7 @@
   --dk-bg-color-650: hsl(275deg, 4%, 28%);
   --dk-bg-color-600: hsl(275deg, 4%, 32%);
   --dk-bg-color-500: hsl(275deg, 4%, 40%);
+  --dk-bg-color-300: hsl(275deg, 4%, 56%);
   --dk-on-bg-color: white;
 
   /* TODO: pick a color for every one below */
