--- a/src/pages/common/sim-controls.css
+++ b/src/pages/common/sim-controls.css
@@ -68,9 +68,10 @@ btn-sim-options > .btn {
 }
 
 .sim-options {
-  background-color: var(--dk-bg-color-700, var(--lt-bg-color-100));
+  background-color: var(--dk-bg-color-600, var(--lt-bg-color-200));
   border-radius: 5px;
-  box-shadow: 0px 2px 4px 0px hsla(0deg, 0%, 8%, 0.25);
+  border: 1px solid var(--dk-bg-color-500, var(--lt-bg-color-200));
+  box-shadow: 0px 2px 4px 0px hsla(0deg, 0%, 3%, 0.3);
   display: flex;
   flex-direction: column;
   gap: 6px;
