--- a/src/pages/trade/trade-page.css
+++ b/src/pages/trade/trade-page.css
@@ -1,3 +1,7 @@
+@import url("../util/button.css");
+@import url("../util/form.css");
+@import url("../util/common.css");
+
 sff-trade-page,
 sff-trade,
 sff-offers {
@@ -142,18 +146,10 @@ input[type="checkbox"] {
   white-space: nowrap;
 }
 
-abbr[title] {
-  text-decoration: none;
-}
-
 .plr-skill {
   border-left: 2px solid;
   padding-left: 4px;
   width: 3.2rem;
-}
-
-sff-go > a {
-  color: var(--dk-on-bg-color, initial);
 }
 
 /* ----------- Content of the offer result modal ------------------ */
