--- a/src/pages/inbox/inbox.css
+++ b/src/pages/inbox/inbox.css
@@ -10,6 +10,10 @@
   box-sizing: border-box;
 }
 
+.open-mail {
+  width: calc(100vw - 8rem);
+}
+
 table {
   border-collapse: collapse;
   border-spacing: 10px 5px;
