--- a/src/pages/util/modal.css
+++ b/src/pages/util/modal.css
@@ -1,57 +1,48 @@
 :host {
-  align-items: center;
-  background-color: var(--modal-bg-color, #4d4d4db3);
-  display: flex;
-  height: 100%;
-  justify-content: center;
-  left: 0;
-  padding: 1rem;
-  position: fixed;
-  top: 0;
-  width: 100%;
-  z-index: 5;
+  display: block;
 }
 
 * {
   box-sizing: border-box;
 }
 
-.container {
+dialog {
   background-color: var(
-    --modal-container-bg-color,
+    --modal-bg-color,
     var(--dk-bg-color, var(--lt-bg-color))
   );
+  border: none;
   border-radius: 5px;
   box-shadow: 0px 2px 4px 0px hsl(0deg 0% 8% / 30%);
-  flex: var(--modal-container-flex, initial);
+  color: var(--dk-on-bg-color, var(--lt-on-bg-color));
   padding: 1.5rem 1rem;
-  position: relative;
-  max-height: 100%;
-  overflow: auto;
+  max-width: calc(100% - 1rem);
+  max-height: calc(100% - 1rem);
 }
 
-@media screen and (max-width: 20rem) {
-  :host,
-  .container {
-    padding: 1.5rem 0.1rem;
-  }
+dialog::backdrop {
+  background-color: var(--backdrop-color, #464646bf);
 }
 
 .close-btn {
   background-color: var(
-    --modal-close-btn-bg-color,
+    --close-btn-bg-color,
     var(--dk-error-color, var(--lt-error-color))
   );
   border: none;
   box-shadow: 0px 1px 3px 0px hsla(0deg 0% 8% / 10%);
   cursor: pointer;
   color: var(
-    --modal-close-btn-color,
+    --close-btn-color,
     var(--dk-on-error-color, var(--lt-on-error-color))
   );
   font-weight: bold;
-  padding: 0 5px;
+  padding: 2px 5px;
   position: absolute;
   right: 0;
   top: 0;
+}
+
+.close-btn:hover {
+  filter: brightness(1.2);
 }
